--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "boulder-flash",
   "version": "0.1.0",
   "private": true,
-  "homepage": "boulder-flash",
+  "homepage": "/",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +25,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
