--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
     "validator": "^13.12.0",
+    "vite-plugin-env-compatible": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && mv build/* public/",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "tsc && vite build && mv build/* public/",
+    "test": "vite test",
     "deploy": "gh-pages -d public",
     "predeploy": "npm run build"
   },
@@ -58,7 +58,11 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "gh-pages": "^6.1.1",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.3.4",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
