--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0",
+    "postcss": "^8.4.39",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -25,17 +27,17 @@
     "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
+    "tailwindcss": "^3.4.6",
     "validator": "^13.12.0",
+    "vite": "^5.3.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && mv build/* public/",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "vite build && mv build/* public/",
+    "preview": "vite preview",
     "deploy": "gh-pages -d public",
     "predeploy": "npm run build"
   },
@@ -58,7 +60,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "tailwindcss": "^3.4.1"
+    "@vitejs/plugin-react": "^4.3.1",
+    "gh-pages": "^6.1.1"
   }
 }
