--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.19",
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.19",
